sqlxo/tests/orm/derive/try/err/wrong_literal.stderr
error: expected string literal: #[sqlxo(table_name = "items")]
 --> tests/orm/derive/try/err/wrong_literal.rs:7:22
  |
7 | #[sqlxo(table_name = 123)]
  |                      ^^^

warning: the feature `inherent_associated_types` is incomplete and may not be safe to use and/or cause compiler crashes
 --> tests/orm/derive/try/err/wrong_literal.rs:1:12
  |
1 | #![feature(inherent_associated_types)]
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #8995 <https://github.com/rust-lang/rust/issues/8995> for more information
  = note: `#[warn(incomplete_features)]` on by default
